# Software-Supply-Chain-HW-1

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODEOWNERS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.bundle  artifact.md  cyclonedx-sbom.json  main.py  merkle_proof.py  pyproject.toml  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
src/sdg8193_rekor/: cli.py  util.py
tests/: test_main.py
