[tool.poetry]
name = "python_rekor_template"
version = "0.1.0"
description = "A command-line tool for querying and verifying entries in a Rekor transparency log. This tool allows you to fetch log entries, verify inclusion proofs, and check the consistency of the log's Merkle tree."
authors = ["Samuel Greenwald <sdg8193@nyu.edu>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
black = "^25.9.0"
ruff = "^0.14.3"
flake8 = "^7.3.0"
pylint = "^4.0.2"
bandit = "^1.8.6"
autodocstring = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
files = ["main.py"]
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.ruff]
line-length = 88
src = ["main.py"]


[tool.bandit]
targets = ["main.py"]
exclude_dirs = ["venv", "tests"]
level = "medium"