[tool.poetry]
name = "sdg8193_rekor"
version = "0.2.0"
description = "A command-line tool for querying and verifying entries in a Rekor transparency log. This tool allows you to fetch log entries, verify inclusion proofs, and check the consistency of the log's Merkle tree."
authors = ["Samuel Greenwald <sdg8193@nyu.edu>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "sdg8193_rekor", from = "src"}]

[tool.poetry.scripts]
sdg8193_rekor = "sdg8193_rekor.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^46.0.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
black = "^25.9.0"
ruff = "^0.14.3"
pylint = "^4.0.2"
bandit = "^1.8.6"
autodocstring = "^0.1.2"
types-requests = "^2.32.4.20250913"
pytest-mock = "^3.15.1"
jsonschema = "^4.25.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
files = ["src/sdg8193_rekor/cli.py"]
ignore_missing_imports = true
warn_unused_configs = true


[tool.ruff]
line-length = 88
src = ["src/sdg8193_rekor/cli.py"]


[tool.bandit]
targets = ["src/sdg8193_rekor/cli.py"]
exclude_dirs = ["venv", "tests"]
level = "medium"


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=sdg8193_rekor.cli --cov-report term-missing"